orders-store-fe-config/app/kustomize/base/store-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-store-fe
  labels:
    app.openshift.io/runtime: quarkus
    app: order-store-fe
    app-with-metrics: order-store-fe

spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-store-fe
  template:
    metadata:
      labels:
        app: order-store-fe
        version: v1
    spec:
      containers:
        - name: order-store-fe-project
          image: quay.io/mcombi/order-store-fe:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
#          readinessProbe:
#            httpGet:
#              path: /q/health
#              port: 8080
#              scheme: HTTP
#            timeoutSeconds: 1
#            periodSeconds: 10
#            successThreshold: 1
#            failureThreshold: 3
#          livenessProbe:
#            httpGet:
#              path: /q/health/
#              port: 8080
#              scheme: HTTP
#            timeoutSeconds: 1
#            periodSeconds: 10
#            successThreshold: 1
#            failureThreshold: 3
