orders-store-fe-config/app/kustomize/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: order-store-fe
  labels:
    app.kubernetes.io/name: order-store-fe
    app.openshift.io/runtime: quarkus
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: order-store-fe
status:
  loadBalancer: {}
